--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -12,34 +12,16 @@
 
 {% block body %}
     <div class="container contacts wrapper-post-container">
-        {{ include('news/components/listPrices.html.twig', {hasContainer:false}) }}
-
         <div class="row post-container">
+            <div class="container">
+                {{ include('news/components/breadcrumbs.html.twig') }}
+            </div>
+            
             {{ include('layout/sidebar.html.twig') }}
             
             <div class="col-xs-12 col-sm-12 col-md-9">
-                {{ include('news/components/breadcrumbs.html.twig') }}
-                
                 <div class="company">
-                    <h3 class="text-uppercase">Xây Dựng Minh Duy</h3>
-                    <ul>
-                        <li>
-                            <i class="fa fa-map-marker"></i>
-                            <span><strong>VPGD: 10E3 Đường 30, P. Tân Phong, Quận 7, TP.HCM</strong></span>
-                        </li>
-                        <li>
-                            <i class="fa fa-phone"></i>
-                            <span><strong>0982.969.379 A Minh</strong></span>
-                        </li>
-                        <li>
-                            <i class="fa fa-envelope-o"></i>
-                            <span><strong>xaydungminhduy@gmail.com</strong></span>
-                        </li>
-                        <li>
-                            <i class="fa fa-internet-explorer"></i>
-                            <span><strong>www.xaydungminhduy.com</strong></span>
-                        </li>
-                    </ul>
+                    <h3 class="text-uppercase">Lily House</h3>
                 </div>
             
                 {% for message in app.flashes('error') %}
