--- a/app/Resources/views/layout/fanpage.html.twig
+++ b/app/Resources/views/layout/fanpage.html.twig
@@ -1,15 +1,15 @@
 <div class="list-group">
-    <h3 class="list-group-item list-group-item-action active text-uppercase">
-        {{ 'sidebar.fanpage'|trans }}
+    <h3 class="list-group-item-action text-uppercase">
+        <span>{{ 'sidebar.fanpage'|trans }}</span>
     </h3>
     <div class="fb-page"
-        data-href="https://www.facebook.com/minhduyconstruction/"
+        data-href="https://www.facebook.com/lilyhouse.fanpage/"
         data-tabs="timeline"
         data-width="340"
         data-small-header="false"
         data-adapt-container-width="true"
         data-hide-cover="true"
         data-show-facepile="true">
-        <blockquote cite="https://www.facebook.com/minhduyconstruction/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/minhduyconstruction/">Xây Nhà, Sửa Nhà Minh Duy</a></blockquote>
+        <blockquote cite="https://www.facebook.com/lilyhouse.fanpage/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/lilyhouse.fanpage/">Lily House</a></blockquote>
     </div>
 </div>
