--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -7,13 +7,16 @@
                 <div>
                     <p>Thực Phẩm Organic chuyên cung cấp các loại trái cây sấy khô tự nhiên và organic hàng nhập từ Mỹ. Ngoài trái cây sấy còn có các loại hạt , bánh</p>
                     <p>118/10B Đông Hưng Thuận 5, Tân Hưng Thuận, Q.12</p>
-                    <p>Call us at: 0909 000 111</p>
-                    <p>Email: support@halothemes.com</p>
+                    <p>Call us at: 0909 356 718</p>
+                    <p>Email: lilyhouse.hotro@gmail.com</p>
                 </div>
             </div>
             <div class="col-12 col-md-12 col-lg-3">
                 <h3 class="text-uppercase">Danh mục</h3>
                 <ul class="about-us">
+                    <li>
+                        <a href="{{ path('shop') }}" title="Chăm sóc da">Cửa hàng Lily House</a>
+                    </li>
                     <li>
                         <a href="{{ path('shop_category', {'level1': 'cham-soc-da' }) }}" title="Chăm sóc da">Chăm sóc da</a>
                     </li>
@@ -46,7 +49,7 @@
                 <h3 class="text-uppercase">Fanpage</h3>
                 <div>
                     <div class="fb-page"
-                        data-href="https://www.facebook.com/trirungtocNhaVyShop/"
+                        data-href="https://www.facebook.com/lilyhouse.fanpage/"
                         data-tabs="timeline"
                         data-width="555"
                         data-height="277"
@@ -54,7 +57,7 @@
                         data-adapt-container-width="true"
                         data-hide-cover="true"
                         data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/trirungtocNhaVyShop/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/trirungtocNhaVyShop/">Dầu Gội Bưởi Nga Hoàng Ngăn Rụng Tóc</a></blockquote>
+                        <blockquote cite="https://www.facebook.com/lilyhouse.fanpage/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/lilyhouse.fanpage/">Lily House</a></blockquote>
                     </div>
                 </div>
             </div>
