--- a/app/Resources/views/news/list.html.twig
+++ b/app/Resources/views/news/list.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %} {{ category.getPageTitle() ~ ' - Trang ' ~ pagination.currentPageNumber }} {% endblock %}
-{% block description %} {{category.getPageDescription()}} {% endblock %}
-{% block keyword %} {{category.getPageKeyword()}} {% endblock %}
+{% block title %} {{ category.getPageTitle() is not null ? category.getPageTitle() : category.getName() ~ ' - Trang ' ~ pagination.currentPageNumber }} {% endblock %}
+{% block description %} {{ category.getPageDescription() is not null ? category.getPageDescription() : category.getDescription()|slice(0, 160) }} {% endblock %}
+{% block keyword %} {{ category.getPageKeyword() }} {% endblock %}
 
 {% block structuredOpenGraph %}
     <meta property="og:type" content="object" />
@@ -11,39 +11,39 @@
 {% endblock %}
 
 {% block body %}
-    {# breadcrumbs #}
-    {{ include('news/components/breadcrumbs.html.twig',
-        { type: 'category', title: category.getName(), description: category.getDescription() })
-    }}
-    
-    <div class="container wrapper-container">
-        <div class="row category-list-items">
-            <div class="col-12 col-md-12 col-lg-12">
-                {# List item on this page #}
+    <div class="container contacts wrapper-post-container">
+        <div class="row post-container">
+            <div class="container">
+                <div class="col-lg-12">
+                    {{ include('news/components/breadcrumbs.html.twig') }}
+                </div>
+            </div>
+            
+            {{ include('layout/sidebar.html.twig') }}
+            
+            <div class="col-xs-12 col-sm-12 col-md-9">
+                <h1>{{ category.getName() }}</h1>
+                <p>{{ category.getDescription()|raw }}</p>
                 {% if pagination|length > 0  %}
-                    {# Sort items #}
                     {% if get_setting('isShowSortOnCategory') %}
                         {{ include('news/components/sort.html.twig') }}
                     {% endif %}
 
                     <div class="list-news-items">
                         <div class="row">
-                            {% for row in pagination %}
-                                {{ include('news/components/itemsGrid.html.twig') }}
-                            {% endfor %}
+                            <div class="home-spotlight-block">
+                                {% for row in pagination %}
+                                    {{ include('news/components/itemsGrid.html.twig') }}
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
 
-                    {# Pagination #}
                     {{ include('news/components/pagination.html.twig') }}
                 {% else %}
                     {{ include('news/components/noRecord.html.twig') }}
                 {% endif %}
             </div>
         </div>
-        
-        {{ render(controller(
-            'AppBundle:News:listNewsByCategory', { 'categoryId': 2 }
-        )) }}
     </div>
 {% endblock %}
