--- a/web/assets/scss/front/global/_fonts.scss
+++ b/web/assets/scss/front/global/_fonts.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=vietnamese');
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap');
 
 $robotoCondesed: 'Roboto Condensed', Arial, Helvetica, sans-serif;
 $arimo: 'Arimo', Arial, Helvetica, sans-serif;
 $arial: Arial, Helvetica, sans-serif;
+$helvetica: Helvetica, Arial, sans-serif;
+$quicksand: 'Quicksand', Arial, Helvetica, sans-serif;
