--- a/app/Resources/views/news/components/itemsGrid.html.twig
+++ b/app/Resources/views/news/components/itemsGrid.html.twig
@@ -1,35 +1,30 @@
-<div class="col-xs-12 col-sm-4 col-md-3 news-item">
-    <div class="news-item-wrapper">
-        <div class="media-thumb">
-            <picture>
-                <!--[if IE 9]><video style="display: none"><![endif]-->
-                <source
-                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_382_298') }}"
-                    media="(max-width: 639px) 100vw" />
-                <source
-                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_224_169') }}"
-                    media="(min-width: 640px) and (max-width: 1023px) 50vw" />
-                <source
-                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_290_220') }}"
-                    media="(min-width: 1024px) 25vw" />
-                <!--[if IE 9]></video><![endif]-->
-                <img
+<div class="col-12 col-md-6 col-lg-4">
+    <div class="spotlight-item">
+        <div class="img-box">
+            <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="animate-scale">
+                <img 
+                    class="lazyload"
                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                    data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_290_220') }}"
-                    class="mr-3 img-thumbnail lazyload"
-                    alt="{{row.getTitle()}}" />
-            </picture>
-            <a class="media-thumb" title="{{ row.getTitle() }}" href="{{ path('news_show', {'slug': row.getUrl() }) }}">
-                <i class="fa fa-link"></i>
+                    data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_377_385') }}"
+                    alt="{{ row.getTitle() }}" />
             </a>
         </div>
-        <div class="media-body">
-            <h5 class="mt-0 mb-1">
-                <a title="{{ row.getTitle() }}" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
-                    <span>{{ row.getTitle() }}</span>
-                </a>
-            </h5>
-            <p>{{ row.getDescription()|slice(0, 85) }}</p>
+        <div class="content spotlight-inner">
+            <div class="content-title">
+                <h4 class="title">
+                    <span>{{ row.category.getName() }}</span>
+                </h4>
+                <h3 class="title">
+                    <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                        <span>{{ row.getTitle() }}</span>
+                    </a>
+                </h3>
+            </div>
+            <p class="des">
+                <span>
+                    {{ row.getDescription()|slice(0, 150) }}
+                </span>
+            </p>
         </div>
     </div>
 </div>
