--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -1,23 +1,38 @@
 {% if relatedNews|length > 0 %}
     <div class="related-news">
-        <h3>{{ 'news.news_related'|trans }}</h3>
+        <h3 class="related-news-title"><span>{{ 'news.news_related'|trans }}</span></h3>
         <div class="row">
             {% for row in relatedNews %}
-                <div class="col-xs-12 col-sm-4 col-md-3">
-                    <div class="related-wrapper">
-                        <div class="related-img">
-                            <img class="img-thumbnail lazyload"
-                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
-                                alt="{{row.getTitle()}}">
-                            <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
-                                <i class="fa fa-link"></i>
-                            </a>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="home-spotlight-block">
+                        <div class="spotlight-item">
+                            <div class="img-box">
+                                <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="animate-scale">
+                                    <img 
+                                        class="lazyload"
+                                        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                        data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_377_385') }}"
+                                        alt="{{ row.getTitle() }}" />
+                                </a>
+                            </div>
+                            <div class="content spotlight-inner">
+                                <div class="content-title">
+                                    <h4 class="title">
+                                        <span>{{ row.category.getName() }}</span>
+                                    </h4>
+                                    <h3 class="title">
+                                        <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                            <span>{{ row.getTitle() }}</span>
+                                        </a>
+                                    </h3>
+                                </div>
+                                <p class="des">
+                                    <span>
+                                        {{ row.getDescription()|slice(0, 150) }}
+                                    </span>
+                                </p>
+                            </div>
                         </div>
-                        <a class="related-title text-center" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
-                            {{ row.getTitle() }}
-                        </a>
-                        <p>{{ row.getDescription()|slice(0, 85) }}</p>
                     </div>
                 </div>
             {% endfor %}
