--- a/app/Resources/views/news/hot.html.twig
+++ b/app/Resources/views/news/hot.html.twig
@@ -1,6 +1,6 @@
 <div class="list-group">
-    <h3 class="list-group-item list-group-item-action active text-uppercase">
-        {{ 'news.hot'|trans }}
+    <h3 class="list-group-item-action text-uppercase">
+        <span>{{ 'news.hot'|trans }}</span>
     </h3>
     <div class="post-bxslider-wrapper">
         <div class="post-sidebar-bxslider">
