--- a/app/Resources/views/news/recent.html.twig
+++ b/app/Resources/views/news/recent.html.twig
@@ -1,36 +1,28 @@
 <div class="list-group">
-    <h3 class="list-group-item list-group-item-action active text-uppercase">
-        Bảng giá dịch vụ
+    <h3 class="list-group-item-action text-uppercase">
+        <span>Danh mục</span>
     </h3>
-    <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá xây nhà trọn gói">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá xây nhà trọn gói</span>
+    <a href="{{ path('news_category', {'level1': 'cham-soc-da' }) }}" class="list-group-item td-list-group-item item-price" title="Chăm sóc da">
+        <span>Chăm sóc da</span>
     </a>
-    <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá sửa nhà trọn gói">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá sửa nhà trọn gói</span>
+    <a href="{{ path('news_category', {'level1': 'cham-soc-toc' }) }}" class="list-group-item td-list-group-item item-price" title="Chăm sóc tóc">
+        <span>Chăm sóc tóc</span>
     </a>
-    <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá xây nhà phần thô">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá xây nhà phần thô</span>
-    </a>
-    <a href="{{ path('news_show', {'slug': 'dich-vu-bao-gia-sua-chua-can-ho-chung-cu' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá sửa chữa chung cư">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá sửa chữa chung cư</span>
-    </a>
-    <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-nha-pho' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá thiết kế nhà phố">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá thiết kế nhà phố</span>
-    </a>
-    <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-thi-cong-quan-cafe-tron-goi-tai-tphcm' }) }}" class="list-group-item td-list-group-item item-price" title="Bảng giá thiết kế thi công quán cafe">
-        <i class="fas fa-hand-point-right"></i><span>Bảng giá thiết kế thi công quán cafe</span>
+    <a href="{{ path('news_category', {'level1': 'khuyen-mai' }) }}" class="list-group-item td-list-group-item item-price" title="Khuyến mãi">
+        <span>Khuyến mãi</span>
     </a>
 </div>
 
 <div class="list-group">
-    <h3 class="list-group-item list-group-item-action active text-uppercase">
-        {{ 'news.recent'|trans }}
+    <h3 class="list-group-item-action text-uppercase">
+        <span>{{ 'news.recent'|trans }}</span>
     </h3>
     {% for row in posts %}
         <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="list-group-item td-list-group-item" title="{{ row.getTitle() }}">
             <img
                 class="lazyload"
                 alt="{{ row.getTitle() }}"
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                 data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}" />
             <span>{{ row.getTitle() }}</span>
         </a>
