--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -29,8 +29,10 @@ $web-font-path: 'data:text/css;base64,';
 @import "global/footer";
 @import "global/hotline";
 @import "global/costs";
+@import "global/form";
 
 @import "pages/homepage";
 @import "pages/news";
 @import "pages/contact";
 @import "pages/product";
+@import "pages/checkout";
