--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -14,9 +14,10 @@
         }
 
         li {
-            width: 15px;
-            height: 15px;
-            background-color: $white;
+            width: 12px;
+            height: 12px;
+            background-color: transparent;
+            border: 1px solid $primaryColor;
             margin: 0;
 
             @media only screen and (max-width : 768px) {
@@ -25,8 +26,8 @@
             }
 
             &.active {
-                width: 15px;
-                height: 15px;
+                width: 12px;
+                height: 12px;
                 background-color: $primaryColor;
 
                 @media only screen and (max-width : 768px) {
@@ -137,7 +138,7 @@
 }
 
 .widget-title {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     text-align: center;
     padding-top: 15px;
 
@@ -212,6 +213,7 @@
                         .media-thumb {
                             img {
                                 border: none;
+                                padding: 7px;
                             }
                         }
 
@@ -289,22 +291,20 @@
             .bx-controls {
                 .bx-controls-direction {
                     .bx-prev {
-                        width: 40px;
-                        height: 120px;
-                        top: 35%;
-                        left: 0;
-                        background: url("../../../images/arrow-left.png") no-repeat;
-                        background-color: rgba(0, 0, 0, 0.3);
+                        width: 30px;
+                        height: 40px;
+                        top: 48%;
+                        left: -35px;
+                        background: url("../../../images/r-left.png") no-repeat;
                         background-size: 40px;
                     }
 
                     .bx-next {
-                        width: 40px;
-                        height: 120px;
-                        top: 35%;
-                        right: 0;
-                        background: url("../../../images/arrow-right.png") no-repeat;
-                        background-color: rgba(0, 0, 0, 0.3);
+                        width: 30px;
+                        height: 40px;
+                        top: 48%;
+                        right: -35px    ;
+                        background: url("../../../images/r-right.png") no-repeat;
                         background-size: 40px;
                     }
                 }
@@ -327,6 +327,7 @@
                 position: relative;
                 display: block;
                 overflow: hidden;
+                height: 385px;
 
                 &::before {
                     content: '';
@@ -397,15 +398,24 @@
                     text-transform: uppercase;
                     font-weight: 500;
                     line-height: 24px;
-                    font-size: 16px;
+                    font-size: 15px;
                     margin-bottom: 5px;
-                    font-family: $robotoCondesed;
+                    font-family: $helvetica;
+                    letter-spacing: -0.5px;
                 }
 
                 h3.title {
                     font-size: 20px;
+                    font-family: $quicksand;
+                    font-weight: 600;
+                    letter-spacing: -0.5px;
                     line-height: 26px;
                     margin-bottom: 0px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
 
                     a {
                         &:hover {
@@ -420,6 +430,7 @@
                 padding: 0 15px;
                 margin: 0;
                 font-size: 16px;
+                font-family: $quicksand;
                 color: #2d2d2d;
                 height: 70px;
                 overflow: hidden;
@@ -427,102 +438,6 @@
                 display: -webkit-box;
                 -webkit-line-clamp: 3;
                 -webkit-box-orient: vertical;
-            }
-        }
-    }
-}
-
-.list-news-items {
-    .news-item {
-        margin-bottom: 20px;
-
-        .news-item-wrapper {
-            border: 1px solid $white;
-
-            &:hover {
-                border: 1px solid $primaryColor2;
-
-                .media-thumb {
-                    .img-thumbnail {
-                        transform: scale(1.5);
-                    }
-
-                    a {
-                        opacity: 1;
-
-                        i {
-                            -webkit-transform: translate(-50%, -50%) rotate(0);
-                            -moz-transform: translate(-50%, -50%) rotate(0);
-                            -ms-transform: translate(-50%, -50%) rotate(0);
-                            transform: translate(-50%, -50%) rotate(0);
-                        }
-                    }
-                }
-            }
-
-            .media-thumb {
-                display: block;
-                height: 220px;
-                overflow: hidden;
-                position: relative;
-
-                @media only screen and (max-width: 980px) {
-                    height: 165px;
-                }
-
-                @media only screen and (max-width: 767.98px) {
-                    height: 260px;
-                }
-
-                .img-thumbnail {
-                    padding: 0px;
-                    border-radius: 0px;
-                    border: none;
-                    width: 100%;
-                    height: 100%;
-                    transition: 0.6s ease;
-                }
-
-                a {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    background-color: rgba(0, 0, 0, 0.5);
-                    overflow: hidden;
-                    opacity: 0;
-                    -webkit-transition: all 0.4s ease;
-                    -moz-transition: all 0.4s ease;
-                    -ms-transition: all 0.4s ease;
-                    transition: all 0.4s ease;
-
-                    i {
-                        display: block;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        width: 50px;
-                        height: 50px;
-                        line-height: 46px;
-                        font-size: 1.3em;
-                        border: 2px solid $white;
-                        color: $white;
-                        text-align: center;
-                        -webkit-border-radius: 50%;
-                        -moz-border-radius: 50%;
-                        -ms-border-radius: 50%;
-                        border-radius: 50%;
-                        -webkit-transform: translate(-50%, -50%) rotate(270deg);
-                        -moz-transform: translate(-50%, -50%) rotate(270deg);
-                        -ms-transform: translate(-50%, -50%) rotate(270deg);
-                        transform: translate(-50%, -50%) rotate(270deg);
-                        -webkit-transition: all 0.4s ease;
-                        -moz-transition: all 0.4s ease;
-                        -ms-transition: all 0.4s ease;
-                        transition: all 0.4s ease;
-                    }
-                }
             }
         }
     }
