--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -1,83 +1,24 @@
 /* News
 ------------------------------------------------------------------------- */
-.category-list-items {
-    padding-top: 50px;
-
-    .description {
-        margin-bottom: 30px;
-    }
-}
-
-/* Slide project hot
-------------------------------------------------------------------------- */
-.project-hot {
-    margin: 0;
-
-    @media only screen and (max-width: 767.98px) {
-        margin: 30px 0 0;
-    }
-
-    .title-list-news-items {
-        h1 {
-            margin: 30px 0 10px;
-        }
-
-        .block-underline {
-            margin-bottom: 30px;
-        }
-    }
-
-    .list-news-items {
-        .bx-wrapper {
-            border: none;
-            margin-bottom: 0;
-
-            @media only screen and (min-width: 979.98px) {
-                max-width: 1200px !important;
-            }
-
-            .bx-viewport {
-                height: 100% !important;
-
-                .news-item {
-                    @media only screen and (min-width: 768px) {
-                        width: initial !important;
-                    }
-    
-                    .news-item-wrapper {
-                        width: 195px !important;
-    
-                        @media only screen and (max-width: 767.98px) {
-                            width: 100% !important;
-                        }
-    
-                        @media (min-width: 768px) and (max-width: 979.98px) {
-                            width: 220px !important;
-                        }
-                    }
+.wrapper-post-container {
+    .home-spotlight-block {
+        .spotlight-item {
+            .img-box {
+                .animate-scale {
+                    height: auto;
                 }
             }
 
-            .bx-controls {
-                .bx-controls-direction {
-                    .bx-prev {
-                        width: 40px;
-                        height: 120px;
-                        top: 35%;
-                        left: 0;
-                        background: url("../../../images/arrow-left.png") no-repeat;
-                        background-color: rgba(0, 0, 0, 0.3);
-                        background-size: 40px;
+            .content.spotlight-inner {
+                .content-title {
+                    h4.title {
+                        font-size: 14px;
                     }
-
-                    .bx-next {
-                        width: 40px;
-                        height: 120px;
-                        top: 35%;
-                        right: 0;
-                        background: url("../../../images/arrow-right.png") no-repeat;
-                        background-color: rgba(0, 0, 0, 0.3);
-                        background-size: 40px;
+                    
+                    h3.title {
+                        font-size: 18px;
+                        min-height: 78px;
+                        -webkit-line-clamp: 3;
                     }
                 }
             }
@@ -93,8 +34,8 @@
 
         .news {
             h1 {
-                font-size: 35px;
-                line-height: 38px;
+                font-size: 32px;
+                line-height: 35px;
             }
         
             .news-container {
@@ -115,15 +56,18 @@
                 a {
                     color: $primaryColor;
                 }
-        
-                h3 {
-                    font-size: 25px;
+                
+                h2 {
+                    font-size: 28px;
                 }
-        
-                blockquote {
+                
+                h3 {
+                    font-size: 24px;
+                }
+
+                p {
                     font-size: 16px;
-                    border-left: 5px solid $primaryColor;
-                    font-style: italic;
+                    line-height: 25px;
                 }
             }
         }
@@ -180,196 +124,37 @@
 .rating-share-container {
     border-top: 1px solid $gallery;
     border-bottom: 1px solid $gallery;
-    padding: 10px 0;
-    margin: 10px 0 20px;
-
-    .rating-container {
-        a#rating {
-            display: inline-block;
-            font-size: 20px;
-            text-decoration: none;
-
-            .rating-title {
-                display: none;
-            }
-        }
-    }
-
-    .social-share {
-        .social-share-label {
-            line-height: 32px;
-            float: left;
-            margin-right: 15px;
-            vertical-align: middle;
-            font-weight: bold;
-            font-style: italic;
-            margin-top: 3px;
-            text-decoration: underline;
-        }
-
-        .at-share-tbx-element .at-share-btn {
-            margin: 0 5px 0px 0;
-        }
-
-        .addthis_inline_share_toolbox_of26_7oy0 {
-            display: inline-block;
-        }
-    }
+    padding: 10px 0 5px;
+    margin: 20px 0;
 }
 
-#form-rating-container {
-    .rating-message {
-        color: $primaryColor;
-        margin: 0;
-    }
-}
-
-/* News Related
+/* News related
 ------------------------------------------------------------------------- */
 .related-news {
-    h3 {
-        position: relative;
-        border-bottom: 3px solid $primaryColor;
+    margin-top: 35px;
 
-        &:before {
-            content: "";
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            width: 150px;
-            height: 3px;
-            background: $primaryColor2;
-        }
-    }
+    h3.related-news-title {
+        font-size: 19px;
+        text-transform: uppercase;
+        font-weight: 600;
+        line-height: 22px;
+        color: $black;
+        border-bottom: 1px solid #efefef;
+        margin: 0;
+        padding-bottom: 8px;
+        font-family: $robotoCondesed;
 
-    .row {
-        .related-wrapper {
-            border: 1px solid $primaryColor;
-            margin-bottom: 30px;
+        span {
+            position: relative;
 
-            &:hover {
-                border: 1px solid $primaryColor2;
-
-                .related-img {
-                    .img-thumbnail {
-                        transform: scale(1.5);
-                    }
-
-                    a {
-                        opacity: 1;
-
-                        i {
-                            -webkit-transform: translate(-50%, -50%) rotate(0);
-                            -moz-transform: translate(-50%, -50%) rotate(0);
-                            -ms-transform: translate(-50%, -50%) rotate(0);
-                            transform: translate(-50%, -50%) rotate(0);
-                        }
-                    }
-                }
-            }
-
-            .related-img {
-                display: block;
-                overflow: hidden;
-                position: relative;
-
-                .img-thumbnail {
-                    border-radius: 0px;
-                    padding: 0px;
-                    border: none;
-                    width: 100%;
-                    height: 150px;
-                    transition: 0.6s ease;
-
-                    @media only screen and (max-width: 767.98px) {
-                        height: auto;
-                    }
-                }
-
-                a {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    background-color: rgba(0, 0, 0, 0.5);
-                    overflow: hidden;
-                    opacity: 0;
-                    -webkit-transition: all 0.4s ease;
-                    -moz-transition: all 0.4s ease;
-                    -ms-transition: all 0.4s ease;
-                    transition: all 0.4s ease;
-
-                    i {
-                        display: block;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        width: 50px;
-                        height: 50px;
-                        line-height: 46px;
-                        font-size: 1.3em;
-                        border: 2px solid $white;
-                        color: $white;
-                        text-align: center;
-                        -webkit-border-radius: 50%;
-                        -moz-border-radius: 50%;
-                        -ms-border-radius: 50%;
-                        border-radius: 50%;
-                        -webkit-transform: translate(-50%, -50%) rotate(270deg);
-                        -moz-transform: translate(-50%, -50%) rotate(270deg);
-                        -ms-transform: translate(-50%, -50%) rotate(270deg);
-                        transform: translate(-50%, -50%) rotate(270deg);
-                        -webkit-transition: all 0.4s ease;
-                        -moz-transition: all 0.4s ease;
-                        -ms-transition: all 0.4s ease;
-                        transition: all 0.4s ease;
-                    }
-                }
-            }
-    
-            a.related-title {
-                margin: 10px 0px;
-                padding: 0 5px;
-                font-size: 15px;
-                line-height: 22px;
-                height: 45px;
-                max-height: 45px;
-                color: $primaryColor2;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-                font-family: $robotoCondesed;
-                font-weight: bold;
-                text-transform: uppercase;
-                text-align: center;
-
-                &:hover {
-                    text-decoration: none;
-                }
-
-                @media only screen and (max-width: 767.98px) {
-                    font-size: 17px;
-                    padding: 5px 10px;
-                    max-height: 45px;
-                    height: 45px;
-                }
-            }
-
-            p {
-                padding: 0 5px;
-                text-align: center;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 3;
-                -webkit-box-orient: vertical;
-
-                @media only screen and (max-width: 767.98px) {
-                    padding: 0px 10px;
-                }
+            &:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -9px;
+                width: 100%;
+                height: 2px;
+                background: $black;
             }
         }
     }
@@ -388,17 +173,28 @@
     margin-bottom: 20px;
 
     & > h4 {
-        font-size: 26px;
-        position: relative;
+        font-size: 19px;
+        text-transform: uppercase;
+        font-weight: 600;
+        line-height: 22px;
+        color: $black;
+        border-bottom: 1px solid #efefef;
+        margin: 0;
+        padding-bottom: 8px;
+        font-family: $robotoCondesed;
 
-        &:before {
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            content: "";
-            width: 90px;
-            height: 3px;
-            background: $primaryColor;
+        span {
+            position: relative;
+
+            &:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -9px;
+                width: 100%;
+                height: 2px;
+                background: $black;
+            }
         }
     }
 
@@ -418,7 +214,7 @@
                 }
     
                 img {
-                    width: 65px;
+                    width: 75px;
                     max-width: none;
     
                     @media only screen and (max-width: 767.98px) {
@@ -457,17 +253,28 @@
     margin-top: 30px;
 
     .comment-reply-title {
-        position: relative;
-        border-bottom: 3px solid $mercury;
+        font-size: 19px;
+        text-transform: uppercase;
+        font-weight: 600;
+        line-height: 22px;
+        color: $black;
+        border-bottom: 1px solid #efefef;
+        margin: 0;
+        padding-bottom: 8px;
+        font-family: $robotoCondesed;
 
-        &:before {
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            content: "";
-            width: 90px;
-            height: 3px;
-            background: $primaryColor;
+        span {
+            position: relative;
+
+            &:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -9px;
+                width: 100%;
+                height: 2px;
+                background: $black;
+            }
         }
     }
 
